virtualMachines/esp32/aggregator/grammar/.antlr/PascalishParser.java
// Generated from c:/dev/pulse-new-repo/virtualMachines/esp32/aggregator/grammar/Pascalish.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PascalishParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, T__103=104, T__104=105, T__105=106, T__106=107, 
		T__107=108, T__108=109, T__109=110, T__110=111, T__111=112, T__112=113, 
		T__113=114, T__114=115, T__115=116, T__116=117, T__117=118, T__118=119, 
		T__119=120, T__120=121, T__121=122, T__122=123, T__123=124, T__124=125, 
		T__125=126, T__126=127, T__127=128, T__128=129, T__129=130, T__130=131, 
		T__131=132, T__132=133, T__133=134, T__134=135, T__135=136, T__136=137, 
		T__137=138, T__138=139, T__139=140, IDENT=141, NUMBER=142, STRING=143, 
		LINE_COMMENT=144, BLOCK_COMMENT=145, BRACE_COMMENT=146, WS=147;
	public static final int
		RULE_compilationUnit = 0, RULE_decl = 1, RULE_placement = 2, RULE_programDecl = 3, 
		RULE_serviceDecl = 4, RULE_daemonDecl = 5, RULE_unitEnd = 6, RULE_unitDecl = 7, 
		RULE_varSection = 8, RULE_varLine = 9, RULE_subprogramDecl = 10, RULE_paramSection = 11, 
		RULE_paramGroup = 12, RULE_daemonSchedule = 13, RULE_typeDecl = 14, RULE_classDecl = 15, 
		RULE_classInheritance = 16, RULE_classMember = 17, RULE_classFieldDecl = 18, 
		RULE_classMethodDecl = 19, RULE_methodParamList = 20, RULE_methodParamDecl = 21, 
		RULE_varDecl = 22, RULE_varSource = 23, RULE_identList = 24, RULE_fileDecl = 25, 
		RULE_queueDecl = 26, RULE_queueType = 27, RULE_stackType = 28, RULE_priorityQueueType = 29, 
		RULE_recordType = 30, RULE_recordField = 31, RULE_typeRef = 32, RULE_genericTypeParams = 33, 
		RULE_simpleType = 34, RULE_userType = 35, RULE_typeName = 36, RULE_genericTypeArgs = 37, 
		RULE_fixedArrayType = 38, RULE_dynamicArrayType = 39, RULE_roleDecl = 40, 
		RULE_roleName = 41, RULE_libraryDecl = 42, RULE_librarySource = 43, RULE_useDecl = 44, 
		RULE_interopDecl = 45, RULE_interopKind = 46, RULE_importDecl = 47, RULE_importTarget = 48, 
		RULE_serviceProvider = 49, RULE_routerDecl = 50, RULE_routerHeaderProp = 51, 
		RULE_verbList = 52, RULE_outputDecl = 53, RULE_outputTypeMeta = 54, RULE_typeRefList = 55, 
		RULE_mapperDecl = 56, RULE_mapperHeaderProp = 57, RULE_mapDecl = 58, RULE_serviceBody = 59, 
		RULE_serviceBodyElement = 60, RULE_serviceLocalDecl = 61, RULE_serviceEndpoint = 62, 
		RULE_httpVerb = 63, RULE_endpointAccepts = 64, RULE_endpointReturns = 65, 
		RULE_serviceStmt = 66, RULE_serviceRouteStmt = 67, RULE_serviceCaseStmt = 68, 
		RULE_serviceCaseArm = 69, RULE_serviceReturnStmt = 70, RULE_serviceExpr = 71, 
		RULE_pl0Snippet = 72, RULE_pl0Block = 73, RULE_pl0Element = 74, RULE_block = 75, 
		RULE_statementList = 76, RULE_blockStmt = 77, RULE_statement = 78, RULE_withStmt = 79, 
		RULE_assignStmt = 80, RULE_callStmt = 81, RULE_ifStmt = 82, RULE_whileStmt = 83, 
		RULE_forStmt = 84, RULE_repeatStmt = 85, RULE_enqueueStmt = 86, RULE_dequeueStmt = 87, 
		RULE_peekStmt = 88, RULE_pushStmt = 89, RULE_popStmt = 90, RULE_concurrentStmt = 91, 
		RULE_cobeginStmt = 92, RULE_asyncStmt = 93, RULE_waitStmt = 94, RULE_identGroup = 95, 
		RULE_waitErrorClause = 96, RULE_timeUnit = 97, RULE_syncStmt = 98, RULE_subflowStmt = 99, 
		RULE_subflowOption = 100, RULE_returnStmt = 101, RULE_fileStmt = 102, 
		RULE_lvalue = 103, RULE_qualifiedName = 104, RULE_qualifiedPart = 105, 
		RULE_fsmOperation = 106, RULE_stringOrIdent = 107, RULE_stringValue = 108, 
		RULE_booleanValue = 109, RULE_exprList = 110, RULE_expr = 111, RULE_logicalOrExpr = 112, 
		RULE_logicalAndExpr = 113, RULE_equalityExpr = 114, RULE_relationalExpr = 115, 
		RULE_additiveExpr = 116, RULE_multiplicativeExpr = 117, RULE_unaryExpr = 118, 
		RULE_primaryExpr = 119;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "decl", "placement", "programDecl", "serviceDecl", 
			"daemonDecl", "unitEnd", "unitDecl", "varSection", "varLine", "subprogramDecl", 
			"paramSection", "paramGroup", "daemonSchedule", "typeDecl", "classDecl", 
			"classInheritance", "classMember", "classFieldDecl", "classMethodDecl", 
			"methodParamList", "methodParamDecl", "varDecl", "varSource", "identList", 
			"fileDecl", "queueDecl", "queueType", "stackType", "priorityQueueType", 
			"recordType", "recordField", "typeRef", "genericTypeParams", "simpleType", 
			"userType", "typeName", "genericTypeArgs", "fixedArrayType", "dynamicArrayType", 
			"roleDecl", "roleName", "libraryDecl", "librarySource", "useDecl", "interopDecl", 
			"interopKind", "importDecl", "importTarget", "serviceProvider", "routerDecl", 
			"routerHeaderProp", "verbList", "outputDecl", "outputTypeMeta", "typeRefList", 
			"mapperDecl", "mapperHeaderProp", "mapDecl", "serviceBody", "serviceBodyElement", 
			"serviceLocalDecl", "serviceEndpoint", "httpVerb", "endpointAccepts", 
			"endpointReturns", "serviceStmt", "serviceRouteStmt", "serviceCaseStmt", 
			"serviceCaseArm", "serviceReturnStmt", "serviceExpr", "pl0Snippet", "pl0Block", 
			"pl0Element", "block", "statementList", "blockStmt", "statement", "withStmt", 
			"assignStmt", "callStmt", "ifStmt", "whileStmt", "forStmt", "repeatStmt", 
			"enqueueStmt", "dequeueStmt", "peekStmt", "pushStmt", "popStmt", "concurrentStmt", 
			"cobeginStmt", "asyncStmt", "waitStmt", "identGroup", "waitErrorClause", 
			"timeUnit", "syncStmt", "subflowStmt", "subflowOption", "returnStmt", 
			"fileStmt", "lvalue", "qualifiedName", "qualifiedPart", "fsmOperation", 
			"stringOrIdent", "stringValue", "booleanValue", "exprList", "expr", "logicalOrExpr", 
			"logicalAndExpr", "equalityExpr", "relationalExpr", "additiveExpr", "multiplicativeExpr", 
			"unaryExpr", "primaryExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'on'", "'local'", "'parent'", "'child'", "'sibling'", "'alternate'", 
			"'program'", "';'", "'service'", "'end'", "'daemon'", "'.'", "'var'", 
			"':'", "'procedure'", "'function'", "'('", "')'", "'refresh'", "'ms'", 
			"'s'", "'m'", "'second'", "'seconds'", "'every'", "'type'", "'='", "'class'", 
			"'extends'", "'from'", "'librarian'", "'mapper'", "','", "'file'", "'of'", 
			"'queue'", "'['", "'..'", "']'", "'<'", "'>'", "'stack'", "'priorityqueue'", 
			"'record'", "'integer'", "'real'", "'boolean'", "'string'", "'-'", "'array'", 
			"'role'", "'code_librarian'", "'library'", "'use'", "'as'", "'interop'", 
			"'wfl'", "'workflow'", "'cobolish'", "'pascalish'", "'import'", "'router'", 
			"'input'", "'begin'", "'description'", "'enabled'", "'methods'", "'output'", 
			"'when'", "'transform'", "'types'", "'source'", "'target'", "'map'", 
			"'to'", "'using'", "'get'", "'post'", "'put'", "'delete'", "'patch'", 
			"'accepts'", "'returns'", "'route'", "'case'", "'else'", "'return'", 
			"'true'", "'false'", "'+'", "'*'", "'/'", "'<='", "'>='", "'<>'", "':='", 
			"'||'", "'if'", "'then'", "'while'", "'do'", "'for'", "'call'", "'not'", 
			"'cobegin'", "'coend'", "'subflow'", "'sync'", "'async'", "'wait'", "'all'", 
			"'with'", "'timeout'", "'into'", "'error'", "'fail'", "'transaction'", 
			"'success'", "'backout'", "'try'", "'catch'", "'endtry'", "'repeat'", 
			"'until'", "'enqueue'", "'dequeue'", "'peek'", "'push'", "'pop'", "'open'", 
			"'read'", "'write'", "'close'", "'action'", "'set'", "'event'", "'observe'", 
			"'or'", "'and'", "'mod'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "IDENT", "NUMBER", 
			"STRING", "LINE_COMMENT", "BLOCK_COMMENT", "BRACE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pascalish.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PascalishParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PascalishParser.EOF, 0); }
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(243);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 7)) & ~0x3f) == 0 && ((1L << (_la - 7)) & 198950032683565141L) != 0)) {
				{
				{
				setState(240);
				decl();
				}
				}
				setState(245);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(246);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclContext extends ParserRuleContext {
		public ProgramDeclContext programDecl() {
			return getRuleContext(ProgramDeclContext.class,0);
		}
		public ServiceDeclContext serviceDecl() {
			return getRuleContext(ServiceDeclContext.class,0);
		}
		public DaemonDeclContext daemonDecl() {
			return getRuleContext(DaemonDeclContext.class,0);
		}
		public TypeDeclContext typeDecl() {
			return getRuleContext(TypeDeclContext.class,0);
		}
		public ClassDeclContext classDecl() {
			return getRuleContext(ClassDeclContext.class,0);
		}
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public QueueDeclContext queueDecl() {
			return getRuleContext(QueueDeclContext.class,0);
		}
		public FileDeclContext fileDecl() {
			return getRuleContext(FileDeclContext.class,0);
		}
		public RoleDeclContext roleDecl() {
			return getRuleContext(RoleDeclContext.class,0);
		}
		public LibraryDeclContext libraryDecl() {
			return getRuleContext(LibraryDeclContext.class,0);
		}
		public UseDeclContext useDecl() {
			return getRuleContext(UseDeclContext.class,0);
		}
		public InteropDeclContext interopDecl() {
			return getRuleContext(InteropDeclContext.class,0);
		}
		public RouterDeclContext routerDecl() {
			return getRuleContext(RouterDeclContext.class,0);
		}
		public MapperDeclContext mapperDecl() {
			return getRuleContext(MapperDeclContext.class,0);
		}
		public ImportDeclContext importDecl() {
			return getRuleContext(ImportDeclContext.class,0);
		}
		public BlockStmtContext blockStmt() {
			return getRuleContext(BlockStmtContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		try {
			setState(264);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(248);
				programDecl();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(249);
				serviceDecl();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 3);
				{
				setState(250);
				daemonDecl();
				}
				break;
			case T__25:
				enterOuterAlt(_localctx, 4);
				{
				setState(251);
				typeDecl();
				}
				break;
			case T__27:
				enterOuterAlt(_localctx, 5);
				{
				setState(252);
				classDecl();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 6);
				{
				setState(253);
				varDecl();
				}
				break;
			case T__35:
				enterOuterAlt(_localctx, 7);
				{
				setState(254);
				queueDecl();
				}
				break;
			case T__33:
				enterOuterAlt(_localctx, 8);
				{
				setState(255);
				fileDecl();
				}
				break;
			case T__50:
				enterOuterAlt(_localctx, 9);
				{
				setState(256);
				roleDecl();
				}
				break;
			case T__52:
				enterOuterAlt(_localctx, 10);
				{
				setState(257);
				libraryDecl();
				}
				break;
			case T__53:
				enterOuterAlt(_localctx, 11);
				{
				setState(258);
				useDecl();
				}
				break;
			case T__55:
				enterOuterAlt(_localctx, 12);
				{
				setState(259);
				interopDecl();
				}
				break;
			case T__61:
				enterOuterAlt(_localctx, 13);
				{
				setState(260);
				routerDecl();
				}
				break;
			case T__31:
				enterOuterAlt(_localctx, 14);
				{
				setState(261);
				mapperDecl();
				}
				break;
			case T__60:
				enterOuterAlt(_localctx, 15);
				{
				setState(262);
				importDecl();
				}
				break;
			case T__63:
				enterOuterAlt(_localctx, 16);
				{
				setState(263);
				blockStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PlacementContext extends ParserRuleContext {
		public PlacementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_placement; }
	}

	public final PlacementContext placement() throws RecognitionException {
		PlacementContext _localctx = new PlacementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_placement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(266);
			match(T__0);
			setState(267);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 124L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramDeclContext extends ParserRuleContext {
		public StringOrIdentContext stringOrIdent() {
			return getRuleContext(StringOrIdentContext.class,0);
		}
		public UnitEndContext unitEnd() {
			return getRuleContext(UnitEndContext.class,0);
		}
		public PlacementContext placement() {
			return getRuleContext(PlacementContext.class,0);
		}
		public List<UnitDeclContext> unitDecl() {
			return getRuleContexts(UnitDeclContext.class);
		}
		public UnitDeclContext unitDecl(int i) {
			return getRuleContext(UnitDeclContext.class,i);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ProgramDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programDecl; }
	}
